--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>I am static website</title>
   </head>
   <body>
+     <background colour>blue<background colour>
     <h1>I am static website</h1>
-    <h4>Change 2 was made </h4>
+    <h4>Change 4 was made </h4>
   </body>
 </html>
